removed a outdated neoforge feature